HW/hw6/result/result_063.txt
dsa15_063:
[Copy] $cp -f ...
------
[Compiling]
$make
gcc -O2 -std=c99 -Wall avl.c -c
gcc -O2 -std=c99 -Wall rb.c -c
gcc -O2 -std=c99 -Wall bst.c -c
gcc -O2 -std=c99 -Wall hw6_2.c -c
Makefile:21: recipe for target 'hw6_2.o' failed
hw6_2.c: In function ‘main’:
hw6_2.c:84:16: error: redefinition of ‘p’
         void **p = bst_probe( tree2 , element ) ;
                ^
hw6_2.c:83:16: note: previous definition of ‘p’ was here
         void **p = avl_probe( tree , element ) ;
                ^
hw6_2.c:85:16: error: redefinition of ‘p’
         void **p = rb_probe( tree3 , element ) ;
                ^
hw6_2.c:84:16: note: previous definition of ‘p’ was here
         void **p = bst_probe( tree2 , element ) ;
                ^
hw6_2.c:85:16: warning: unused variable ‘p’ [-Wunused-variable]
         void **p = rb_probe( tree3 , element ) ;
                ^
make: *** [hw6_2.o] Error 1

$make hw6_2
gcc -O2 -std=c99 -Wall hw6_2.c -c
Makefile:21: recipe for target 'hw6_2.o' failed
hw6_2.c: In function ‘main’:
hw6_2.c:84:16: error: redefinition of ‘p’
         void **p = bst_probe( tree2 , element ) ;
                ^
hw6_2.c:83:16: note: previous definition of ‘p’ was here
         void **p = avl_probe( tree , element ) ;
                ^
hw6_2.c:85:16: error: redefinition of ‘p’
         void **p = rb_probe( tree3 , element ) ;
                ^
hw6_2.c:84:16: note: previous definition of ‘p’ was here
         void **p = bst_probe( tree2 , element ) ;
                ^
hw6_2.c:85:16: warning: unused variable ‘p’ [-Wunused-variable]
         void **p = rb_probe( tree3 , element ) ;
                ^
make: *** [hw6_2.o] Error 1

$make hw6_3
gcc -O2 -std=c99 -Wall avl_ntudsa.c -c
make: *** No rule to make target 'hw6_3.o', needed by 'hw6_3'.  Stop.

------

[Error]Execute hw6_2 error: Executable file not found
[Error]Execute hw6_3 error: Executable file not found
